Правки разметки страниц

--- a/Catalog.html
+++ b/Catalog.html
@@ -21,8 +21,8 @@
           <p>Интернет-магазин <br>строительных материалов<br>и инструментов для ремонта</p>
         </div>
         <div>
-          <div><p>+7 (812) 555-05-55</p></div>
-          <div><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
+          <div><a href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div>
           <a href="">Равшан Джамшутович</a>
@@ -56,11 +56,11 @@
     <div>
       <h2>Перфораторы</h2>
     </div>
-    <div>
-      <div><p>Фильтр</p></div>
+    <form method="get" action="">
+      <p>Фильтр</p>
       <fieldset>
         <legend>Цена:</legend>
-        <form >
+        <form>
           <input type="range" min="0" max="30000" value="50"> 
           <input type="number" min="0"/>
           <input type="number" max="30000"/>
@@ -105,7 +105,7 @@
         </ul>
       </fieldset>
       <button type="submit">Показать</button>
-    </div>
+    </form>
     <div>
       <div>
         <p>Сортировка:</p>
@@ -198,7 +198,7 @@
       </ul>
     </nav>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-      +7 (812) 555-05-55</p>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     <nav>
        <ul>
           <li><a href="">Материалы</a></li>
@@ -214,7 +214,7 @@
     <a href="https://www.facebook.com/"></a>
     <a href="http://instagram.com/"></a>
     <p>Обратная связь:</p>
-    <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
     <p>Разработано —</p>
     <a href="htmlacademy.ru">htmlacademy.ru</a>
   </div>
