--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <p>Интернет-магазин <br>строительных материалов<br>и инструментов для ремонта</p>
         </div>
         <div>
-          <div><p>+7 (812) 555-05-55</p></div>
-          <div><p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
+          <div><a href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div>
           <a href="">Войти</a>
@@ -125,14 +125,22 @@
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
     </div>
     <div>
-      <div>
-        <input type="radio" id="button-1" name="service-toggle" checked>
-        <label for="button-1">Доставка</label>
-        <input type="radio" id="button-2" name="service-toggle">
-        <label for="button-2">Гарантия</label>
-        <input type="radio" id="button-3" name="service-toggle">
-        <label for="button-3">Кредит</label>
-      </div>
+      <form>
+        <ul>
+          <li>
+            <input type="radio" id="button-1" name="service-toggle" checked>
+            <label for="button-1">Доставка</label>
+          </li>
+          <li>
+            <input type="radio" id="button-2" name="service-toggle">
+            <label for="button-2">Гарантия</label>
+          </li>
+          <li>
+            <input type="radio" id="button-3" name="service-toggle">
+            <label for="button-3">Кредит</label>
+          </li>
+         </ul>
+      </form>
       <div>  
         <h2>Сервисы</h2>
          <p>Мы с удовольствием доставим ваш товар прямо<br> 
@@ -178,7 +186,7 @@
       </ul>
     </nav>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-      +7 (812) 555-05-55</p>
+    <a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     <nav>
        <ul>
           <li><a href="">Материалы</a></li>
@@ -194,7 +202,7 @@
     <a href="https://www.facebook.com/"></a>
     <a href="http://instagram.com/"></a>
     <p>Обратная связь:</p>
-    <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
     <p>Разработано —</p>
     <a href="htmlacademy.ru">htmlacademy.ru</a>
   </div>
