--- a/Catalog.html
+++ b/Catalog.html
@@ -3,38 +3,44 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="normalize.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
-<body>
-<header>
-    <div>
-      <a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a>
-      <form action="#" method="get" enctype="multipart/form-data">
-        <input type="search" name="search" id="search" placeholder="Поиск:"> 
-        <label class="search-label" for="search"></label>
-      </form>
-       <a href="">Закладки:</a>
-       <a href="">Корзина:</a>
-       <a href="">Оформить заказ</a>
-    </div>
-    <div>
-        <div>
-          <p>Интернет-магазин <br>строительных материалов<br>и инструментов для ремонта</p>
-        </div>
-        <div>
-          <div><a href="tel:+78125550555">+7 (812) 555-05-55</a></div>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        </div>
-        <div>
+<body class="page-body">
+  <header class="main-header">
+      <div class="header-top">
+        <a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a>
+        <form action="#" method="get" enctype="multipart/form-data">
+          <input type="search" name="search" id="search" placeholder="Поиск:">
+          <label class="search-label" for="search"></label>
+        </form>
+         <a class="bookmarks" href="">Закладки:</a>
+         <a  class="basket" href="">Корзина:</a>
+         <a  class="order" href="">Оформить заказ</a>
+      </div>
+      <div class="header-for-user">
+          <p class="description">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+          <div class="header-contacts">
+            <div class="contacts-telephone"><a href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+            <p class="contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+        <div class="header-login">
           <a href="">Равшан Джамшутович</a>
-          <div>
+          <div class="other-links">
             <a href="">Мои заказы</a>
             <span>.</span>
             <a href="">Личный кабине</a>
         </div>
         </div>
     </div>
-    <nav>
-    <ul>
+    <nav class="main-nav">
+    <ul class="header-nav">
       <li><a href="index.html">Главная</a></li>
       <li><a href="">Компания</a></li>
       <li><a href="Catalog.html">Каталог</a></li>
@@ -45,148 +51,161 @@
     </ul>
     </nav>
 </header>
-<main>
-  <section>
-    <div>
+<main class="container">
+  <section class="catalog">
+    <div class="breadcrumbs">
        <a href="index.html"></a>
        <a href="">Каталог</a>
        <a  href="">Инструмент</a>
-       <a>Перфораторы</a>
+       <a href="">Перфораторы</a>
     </div>
-    <div>
+    <div class="catalog-header">
       <h2>Перфораторы</h2>
     </div>
-    <form method="get" action="">
-      <p>Фильтр</p>
-      <fieldset>
+    <form class="filters" action="#" method="get">
+      <div class="filter">
+        <p>Фильтр</p>
+      </div>
+      <fieldset class="filter-price">
         <legend>Цена:</legend>
-          <input type="range" min="0" max="30000" value="50"> 
+          <input type="range" min="0" max="30000" value="25000">
           <input type="number" min="0"/>
           <input type="number" max="30000"/>
       </fieldset>
-      <fieldset>
+      <fieldset class="filter-producer">
         <legend>Производители:</legend>
         <ul>
-          <li>
+          <li class="filter-option filter-checkbox">
             <input type="checkbox" name="BOSCH" id="filter-BOSCH" checked>
             <label for="filter-BOSCH">BOSCH</label>
           </li>
-          <li>
+          <li class="filter-option filter-checkbox">
             <input type="checkbox" name="interskol" id="filter-interskol">
             <label for="filter-interskol">ИНТЕРСКОЛ</label>
           </li>
-          <li>
+          <li class="filter-option filter-checkbox">
             <input type="checkbox" name="MAKITA" id="filter-MAKITA" checked>
             <label for="filter-MAKITA">MAKITA</label>
           </li>
-          <li>
+          <li class="filter-option filter-checkbox">
             <input type="checkbox" name="Dewalt" id="filter-Dewalt">
             <label for="filter-Dewalt">Dewalt</label>
           </li>
-          <li>
+          <li class="filter-option filter-checkbox">
             <input type="checkbox" name="Dewalt" id="filter-Hitachi">
             <label for="filter-Hitachi">Hitachi</label>
           </li>
         </ul>
       </fieldset>
-      <fieldset>
+      <fieldset class="filter-energy">
         <legend>Питание:</legend>
         <ul>
-          <li>
+          <li class="filter-option filter-radio">
             <input type="radio" name="energy-group" value="rechargeable" id="filter-rechargeable" checked>
             <label for="filter-rechargeable">Аккумуляторные</label>
           </li>
-          <li>
+          <li class="filter-option filter-radio">
             <input type="radio" name="energy-group" value="network" id="filter-network">
             <label for="filter-network">Сетевые</label>
           </li>
         </ul>
       </fieldset>
-      <button type="submit">Показать</button>
+      <button class="filter-button" type="submit">Показать</button>
     </form>
     <div>
-      <div>
+      <fieldset class="filter">
         <p>Сортировка:</p>
-        <a href="">По цене</a>
-        <a href="">По типу</a>
-        <a href="">По функционалу</a>
-      </div>
-      <ul>
-        <li>
-          <p><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
-          <p>Перфоратор BOSCH BFG 6000</p>
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
+        <ul>
+         <li>
+          <input type="radio" name="filter-group" value="price" id="filter-price" checked>
+          <label for="filter-price">По цене</label>
+         </li>
+         <li>
+          <input type="radio" name="filter-group" value="type" id="filter-type" >
+          <label for="filter-type">По типу</label>
+         </li>
+         <li>
+          <input type="radio" name="filter-group" value="function" id="filter-function">
+          <label for="filter-function">По функционалу</label>
+         </li>
+       </ul>
+      </fieldset>
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
+          <p class="catalog-item-price">30500 Р.</p>
+          <button  class="catalog-item-button" type="button">25500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
-          <p>Перфоратор BOSCH BFG 6000</p>
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
+          <p class="catalog-item-price">30500 Р.</p>
+          <button  class="catalog-item-button" type="button">25500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
-          <p>Перфоратор BOSCH BFG 6000</p>
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
+          <p class="catalog-item-price">30500 Р.</p>
+          <button class="catalog-item-button" type="button">25500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
-          <p>Перфоратор BOSCH BFG 3000</p>
-          <p>22500 Р.</p>
-          <button type="button">15500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 3000</p>
+          <p class="catalog-item-price">22500 Р.</p>
+          <button class="catalog-item-button" type="button">15500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
-          <p>Перфоратор BOSCH BFG 6000</p>
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
+          <p class="catalog-item-price">30500 Р.</p>
+          <button class="catalog-item-button" type="button">25500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
-          <p>Перфоратор BOSCH BFG 2000</p>
-          
-          <button type="button">12500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 2000</p>
+          <p class="catalog-item-price"></p>
+          <button class="catalog-item-button" type="button">12500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
-          <p>Перфоратор BOSCH BFG 3000</p>
-          <p>22500 Р.</p>
-          <button type="button">15500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 3000</p>
+          <p class="catalog-item-price">22500 Р.</p>
+          <button  class="catalog-item-button" type="button">15500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
-          <p>Перфоратор BOSCH BFG 6000</p>
-          <p>30500 Р.</p>
-          <button type="button">25500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
+          <p class="catalog-item-price">30500 Р.</p>
+          <button class="catalog-item-button" type="button">25500 Р.</button>
         </li>
-        <li>
-          <p><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
-          <p>Перфоратор BOSCH BFG 2000</p>
-          
-          <button type="button">12500 Р.</button>
+        <li class="catalog-item">
+          <p class="catalog-item-image"><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
+          <p class="catalog-item-title">Перфоратор BOSCH BFG 2000</p>
+          <p class="catalog-item-price"></p>
+          <button class="catalog-item-button" type="button">12500 Р.</button>
         </li>
       </ul>
-      <ul>
-        <li><a href="">1</a></li>
-        <li><a href="">2</a></li>
-        <li><a href="">3</a></li>
-        <li><a href="">следующая</a>
+      <ul class="pagination-list">
+        <li class="pagination-item"><a href="">1</a></li>
+        <li class="pagination-item"><a href="">2</a></li>
+        <li class="pagination-item"><a href="">3</a></li>
+        <li class="pagination-item"><a href="">следующая</a>
         </li>
       </ul>
     </div>
   </section>
-  <section>
+  <section class="about-items">
     <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
     <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-      Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+      Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
       В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
   </section>
 </main>
-<footer>
-  <div>
+<footer class="main-footer">
+  <div class="footer-top">
     <a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a>
-    <nav>
+    <nav class="footer-nav-main">
       <ul>
         <li><a href="">Компания</a></li>
         <li><a href="">Новости</a></li>
@@ -196,27 +215,35 @@
       </ul>
     </nav>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-      <a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-    <nav>
+    <a class="footer-telephone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+    <nav class="footer-nav">
        <ul>
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Спецпредложения</a></li>
       </ul>
-    </nav>   
+    </nav>
   </div>
-  <div>
+  <div class="footer-bottom">
     <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
-    <a href="https://vk.com/"></a>
-    <a href="https://www.facebook.com/"></a>
-    <a href="http://instagram.com/"></a>
+    <p class="social-button-vk"><a href="https://vk.com/"></a></p>
+    <p class="social-button-fb"><a href="https://www.facebook.com/"></a></p>
+    <p class="social-button-inst"><a href="http://instagram.com/"></a></p>
     <p>Обратная связь:</p>
-    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
     <p>Разработано —</p>
-    <a href="htmlacademy.ru">htmlacademy.ru</a>
+    <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a>
   </div>
-  
 </footer>
+<section class="modal-add-product">
+  <p>Товар добавлен в корзину!</p>
+  <div class="form-bottom">
+    <button  class="main-button" type="button">Оформить заказ</button>
+    <button  class="main-button" type="button">Продолжить покупки</button>
+  </div>
+  <button class="modal-close" type="button"></button>
+</section>
+
 </body>
 </html>
