--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="normalize.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/Normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 </head>
 <body class="page-body">
@@ -63,6 +63,14 @@
       <button class="category-button" type="button">для стройки</button>
      </div>
      <div class="category-items">
+      <input type="radio" id="btn-1" name="toggle" checked>
+      <input type="radio" id="btn-2" name="toggle">
+             <div class="slider-controls">
+        <label for="btn-1"></label>
+        <label for="btn-2"></label>
+              </div>
+      <label class="arrow-left" for="btn-1"></label>
+      <label class="arrow-right" for="btn-2"></label>
       <div class="slide">
         <p class="slide-title">Перфораторы</p>
         <p class="slide-text">Настоящие мужские игрушки</p>
@@ -124,7 +132,6 @@
       <li class="providers-item"><a href=""><img src="img/providers/makita.jpg" width="220" height="145" alt="makita"></a></li>
       <li class="providers-item"><a href=""><img src="img/providers/dewalt.jpg" width="220" height="145" alt="dewalt"></a></li>
       <li class="providers-item"><a href=""><img src="img/providers/interskol.jpg" width="220" height="145" alt="interskol"></a></li>
-      <li class="providers-item"><a href=""><img src="img/providers/interskol.jpg" width="220" height="145" alt="interskol"></a></li>
       <li class="providers-item"><a href=""><img src="img/providers/hitachi.jpg" width="220" height="145" alt="hitachi"></a></li>
       <li class="providers-item"><a href=""><img src="img/providers/lg.jpg" width="220" height="145" alt="lg"></a></li>
       <li class="providers-item"><a href=""><img src="img/providers/aeg.jpg" width="220" height="145" alt="aeg"></a></li>
@@ -154,13 +161,30 @@
           </li>
          </ul>
       </form>
-      <div class="features-description">
-        <h2>Доставка</h2>
-         <p>Мы с удовольствием доставим ваш товар прямо<br>
+      <div class="other-description">
+        <div class="delivery">
+          <h2>Доставка</h2>
+          <p>Мы с удовольствием доставим ваш товар прямо<br>
             к вашему подъезду совершенно бесплатно!<br>
             Ведь мы неплохо заработаем,<br>
             поднимая его на ваш этаж!
           </p>
+        </div>
+        <div class="guarantee">
+          <h2>Гарантия</h2>
+          <p>Если купленный у нас товар поломается или заискрит, <br>
+            а также в случае пожара, спровоцированного его возгоранием, <br>
+            вы всегда можете быть уверены в нашей гарантии.<br>
+            Мы обменяем сгоревший товар на новый. <br>
+            Дом уж восстановите как-нибудь сами.</p>
+        </div>
+        <div class="credit">
+          <h2>Кредит</h2>
+          <p>Залезть в долговую яму стало проще!<br>
+            Кредитные консультанты придут вам на помощь.</p>
+        </div>
+
+
       </div>
     </div>
   </section>
