--- a/Catalog.html
+++ b/Catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
@@ -14,6 +14,7 @@
 </head>
 <body class="page-body">
   <header class="main-header">
+    <div class="main-header-bar">
       <div class="header-top">
         <a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a>
         <form action="#" method="get" enctype="multipart/form-data">
@@ -24,6 +25,7 @@
          <a  class="basket" href="">Корзина:</a>
          <a  class="order" href="">Оформить заказ</a>
       </div>
+    </div>
       <div class="header-for-user">
           <p class="description">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
           <div class="header-contacts">
@@ -35,7 +37,7 @@
           <div class="other-links">
             <a href="">Мои заказы</a>
             <span>.</span>
-            <a href="">Личный кабине</a>
+            <a href="">Личный кабинет</a>
         </div>
         </div>
     </div>
@@ -51,7 +53,8 @@
     </ul>
     </nav>
 </header>
-<main class="container">
+<main>
+  <div class="container">
   <section class="catalog">
     <div class="breadcrumbs">
        <a href="index.html"></a>
@@ -118,7 +121,7 @@
       </fieldset>
       <button class="filter-button" type="submit">Показать</button>
     </form>
-    <div>
+    <div class="catalog-section">
       <fieldset class="filter">
         <p>Сортировка:</p>
         <ul>
@@ -201,18 +204,22 @@
       </ul>
     </div>
   </section>
+  </div>
+  <div class="about-items-wrapper">
   <section class="about-items">
     <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
     <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
       Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
       В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
   </section>
+  </div>
 </main>
 <footer class="main-footer">
-  <div class="footer-top">
+  <div class="footer-top-wrapper">
+    <div class="footer-top">
     <a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a>
     <nav class="footer-nav-main">
-      <ul>
+      <ul class="footer-nav-main">
         <li><a href="">Компания</a></li>
         <li><a href="">Новости</a></li>
         <li><a href="">Каталог</a></li>
@@ -221,17 +228,19 @@
       </ul>
     </nav>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-    <a class="footer-telephone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+    <a  class="footer-telephone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     <nav class="footer-nav">
-       <ul>
+       <ul class="footer-nav">
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Спецпредложения</a></li>
       </ul>
     </nav>
+    </div>
   </div>
-  <div class="footer-bottom">
+  <div class="footer-bottom-wrapper">
+    <div class="footer-bottom">
     <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
     <p class="social-button-vk"><a href="https://vk.com/"></a></p>
     <p class="social-button-fb"><a href="https://www.facebook.com/"></a></p>
@@ -240,7 +249,8 @@
     <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
     <p>Разработано —</p>
     <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a>
-  </div>
+    </div>
+ </div>
 </footer>
 <section class="modal-add-product">
   <p>Товар добавлен в корзину!</p>
@@ -250,6 +260,5 @@
   </div>
   <button class="modal-close" type="button"></button>
 </section>
-
 </body>
 </html>
