--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
@@ -15,6 +15,7 @@
 </head>
 <body class="page-body">
 <header class="main-header">
+  <div class="main-header-bar">
     <div class="header-top">
       <a href=""><img src="img/logo-technomart_s.svg" alt="Логотип «Техномарт»"></a>
       <form action="#" method="get" enctype="multipart/form-data">
@@ -25,6 +26,7 @@
        <a  class="basket" href="">Корзина:</a>
        <a  class="order" href="">Оформить заказ</a>
     </div>
+  </div>
     <div class="header-for-user">
         <p class="description">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
         <div class="header-contacts">
@@ -48,11 +50,12 @@
     </ul>
     </nav>
 </header>
-<main class="container">
+<main>
+  <div class="container">
   <section class="category">
     <div class="category-materials">
       <p>Материалы</p>
-      <button class="category-button" type="button" >на любой вкус</button>
+      <button class="category-button" type="button">на любой вкус</button>
      </div>
      <div class="category-tools">
       <p>Инструмент</p>
@@ -138,7 +141,9 @@
       <li class="providers-item"><a href=""><img src="img/providers/metabo.jpg" width="220" height="145" alt="metabo"></a></li>
     </ul>
   </section>
-  <section class="features">
+ </div>
+  <div class="features-wrapper">
+  <section class="features container">
     <div class="features-description">
      <h2>Сервисы</h2>
      <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
@@ -183,12 +188,11 @@
           <p>Залезть в долговую яму стало проще!<br>
             Кредитные консультанты придут вам на помощь.</p>
         </div>
-
-
       </div>
     </div>
   </section>
-  <section class="about-company">
+  </div>
+  <section class="about-company container">
     <div class="company">
       <h2>Компания «Техномарт»</h2>
       <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -205,16 +209,17 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, <br>
         заехав в наш офис:</p>
-        <!--здесь будет карта <iframe></iframe> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <button class="main-button" type="button">Заблудились? Напишите нам!</button>
     </div>
   </section>
 </main>
 <footer class="main-footer">
-  <div class="footer-top">
+  <div class="footer-top-wrapper">
+    <div class="footer-top">
     <a href=""><img src="img/logo-technomart_m.svg" alt="Логотип «Техномарт»"></a>
     <nav class="footer-nav-main">
-      <ul>
+      <ul class="footer-nav-main">
         <li><a href="">Компания</a></li>
         <li><a href="">Новости</a></li>
         <li><a href="">Каталог</a></li>
@@ -225,15 +230,17 @@
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
     <a  class="footer-telephone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     <nav class="footer-nav">
-       <ul>
+       <ul class="footer-nav">
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Спецпредложения</a></li>
       </ul>
     </nav>
+    </div>
   </div>
-  <div class="footer-bottom">
+  <div class="footer-bottom-wrapper">
+    <div class="footer-bottom">
     <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
     <p class="social-button-vk"><a href="https://vk.com/"></a></p>
     <p class="social-button-fb"><a href="https://www.facebook.com/"></a></p>
@@ -242,7 +249,8 @@
     <a  class="footer-contacts" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
     <p>Разработано —</p>
     <a class="footer-contacts" href="htmlacademy.ru">htmlacademy.ru</a>
-  </div>
+    </div>
+ </div>
 </footer>
 <section class="modal-write-us">
   <form class="write-us-form" action="#" method="post">
@@ -257,10 +265,8 @@
   <button class="modal-close" type="button"></button>
 </section>
 <section  class="modal-modal-map">
-  <!-- Здесь будет карта -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   <button class="modal-close" type="button"></button>
 </section>
-
-
 </body>
 </html>
