--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
           <p class="contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="header-login">
-          <a  href="">Войти</a>
-          <a  href="">Регистрация</a>
+          <a class="login" href="">
+            <svg width="21" height="17" viewBox="0 0 21 17"  xmlns="http://www.w3.org/2000/svg">
+              <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
+              <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z" fill="#C5C5C5"/>
+              </svg>
+              Войти</a>
+          <a  class="check-in" href="">Регистрация</a>
         </div>
     </div>
     <nav class="main-nav">
@@ -195,13 +200,15 @@
   <section class="about-company container">
     <div class="company">
       <h2>Компания «Техномарт»</h2>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+         ремонта и строительства не оставит равнодушными любителей сэкономить на<br>
+         гастарбайтерах.</p>
       <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
          Техномарт работает со многими транспортными компаниями:</p>
       <ul class="partners">
-        <li>Деловые линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
+        <li><p class="bullet"></p>Деловые линии</li>
+        <li><p class="bullet"></p>Автотрейдинг</li>
+        <li><p class="bullet"></p>ЖелДорЭкспедиция</li>
       </ul>
       <button class="main-button" type="button">подробнее о компании</button>
     </div>
