--- a/index.html
+++ b/index.html
@@ -89,23 +89,29 @@
       <button class="category-button" type="button">для стройки</button>
      </div>
      <div class="category-items">
-      <input type="radio" id="btn-1" name="toggle" checked>
-      <input type="radio" id="btn-2" name="toggle">
-             <div class="slider-controls">
-        <label for="btn-1"></label>
-        <label for="btn-2"></label>
+        <div class="category-slider">
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <div class="slider-controls">
+           <label class="radio-btn1" for="btn-1"></label>
+           <label class="radio-btn2" for="btn-2"></label>
+          </div>
+          <div class="slider-controls-arrow">
+            <label class="arrow-left" for="btn-1" ></label>
+            <label class="arrow-right" for="btn-2"></label>
+          </div>
+          <div class="slider-inner">
+            <div class="slider-slides">
+              <div class="slider-text">
+                <p>ПЕРФОРАТОРЫ <br><span>Настоящие мужские игрушки</span></p>
+                <p>ДРЕЛИ<br> <span>Соседям на радость!</span></p>
               </div>
-      <label class="arrow-left" for="btn-1"></label>
-      <label class="arrow-right" for="btn-2"></label>
-      <div class="slide">
-        <p class="slide-title">Перфораторы</p>
-        <p class="slide-text">Настоящие мужские игрушки</p>
-      </div>
-      <div class="slide">
-        <p class="slide-title">Дрели</p>
-        <p class="slide-text">Соседям на радость!</p>
-      </div>
-      <button  class="main-button" type="button">открыть каталог</button>
+              <img src="img/slider/slide-1.jpg" width="620" height="266" alt="Перфораторы">
+              <img src="img/slider/slide-2.jpg" width="620" height="266" alt="Дрели">
+            </div>
+          </div>
+          <button  class="main-button" type="button">ОТКРЫТЬ КАТАЛОГ</button>
+        </div>
      </div>
      <div class="category-sale">
       <p>Скидки 50%</p>
@@ -123,25 +129,71 @@
     </div>
     <ul class="catalog-list">
       <li class="catalog-item">
-        <p class="catalog-item-image"><img src="img/items/BFG_9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000"></p>
+        <p class="catalog-item-image">
+            <button class="card-button1" type="button"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+              <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+              <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
+              </svg> &nbsp; Купить</button>
+            <button class="card-button2" type="button">В закладки</button>
+          <img src="img/items/BFG_9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 9000</p>
         <p class="catalog-item-price">32500 Р.</p>
         <button class="catalog-item-button" type="button">25500 Р.</button>
       </li>
       <li class="catalog-item">
-        <p class="catalog-item-image"><img src="img/items/BFG_3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
+        <p class="catalog-item-image">
+          <svg class="new" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="70" height="70">
+            <rect width="70" height="70" fill="#C4C4C4"/>
+            </mask>
+            <g mask="url(#mask0)">
+            <rect x="22.2129" y="-23" width="100" height="30" transform="rotate(45 22.2129 -23)" fill="#EE3643"/>
+            <path d="M34.4523 19.1096L41.382 12.1799L42.3719 13.1699L39.5011 20.0995L39.5506 20.149L44.4508 15.2488L45.3418 16.1397L38.4121 23.0694L37.4222 22.0794L40.293 15.1498L40.2435 15.1003L35.3433 20.0005L34.4523 19.1096ZM39.7984 24.4557L46.7281 17.526L50.0939 20.8919L49.4009 21.5848L46.9261 19.1099L44.6492 21.3868L46.8271 23.5647L46.1341 24.2577L43.9562 22.0798L41.3824 24.6537L43.8572 27.1285L43.1643 27.8215L39.7984 24.4557ZM44.8986 29.5558L50.6898 21.4878L51.5808 22.3787L47.126 28.6154L47.1755 28.6649L52.3232 25.695L53.2142 26.586L50.2443 31.7337L50.2938 31.7832L56.5305 27.3285L57.4215 28.2194L49.3534 34.0106L48.2644 32.9217L51.3036 27.6452L51.264 27.6056L45.9875 30.6448L44.8986 29.5558Z" fill="white"/>
+            </g>
+            </svg>
+          <button class="card-button1" type="button"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+            <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+            <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
+            </svg> &nbsp; Купить</button>
+          <button class="card-button2" type="button">В закладки</button>
+        <img src="img/items/BFG_3000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 3000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 3000</p>
         <p class="catalog-item-price"> 22500 Р.</p>
         <button class="catalog-item-button" type="button">15500 Р.</button>
       </li>
       <li class="catalog-item">
-        <p class="catalog-item-image"><img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
+        <p class="catalog-item-image">
+          <button class="card-button1" type="button"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+            <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+            <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
+            </svg> &nbsp; Купить</button>
+          <button class="card-button2" type="button">В закладки</button>
+          <img src="img/items/BFG_6000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 6000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 6000</p>
         <p class="catalog-item-price">30500 Р.</p>
         <button  class="catalog-item-button" type="button">25500 Р.</button>
       </li>
       <li class="catalog-item">
-        <p class="catalog-item-image"><img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
+        <p class="catalog-item-image">
+          <svg class="new" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="70" height="70">
+            <rect width="70" height="70" fill="#C4C4C4"/>
+            </mask>
+            <g mask="url(#mask0)">
+            <rect x="22.2129" y="-23" width="100" height="30" transform="rotate(45 22.2129 -23)" fill="#EE3643"/>
+            <path d="M34.4523 19.1096L41.382 12.1799L42.3719 13.1699L39.5011 20.0995L39.5506 20.149L44.4508 15.2488L45.3418 16.1397L38.4121 23.0694L37.4222 22.0794L40.293 15.1498L40.2435 15.1003L35.3433 20.0005L34.4523 19.1096ZM39.7984 24.4557L46.7281 17.526L50.0939 20.8919L49.4009 21.5848L46.9261 19.1099L44.6492 21.3868L46.8271 23.5647L46.1341 24.2577L43.9562 22.0798L41.3824 24.6537L43.8572 27.1285L43.1643 27.8215L39.7984 24.4557ZM44.8986 29.5558L50.6898 21.4878L51.5808 22.3787L47.126 28.6154L47.1755 28.6649L52.3232 25.695L53.2142 26.586L50.2443 31.7337L50.2938 31.7832L56.5305 27.3285L57.4215 28.2194L49.3534 34.0106L48.2644 32.9217L51.3036 27.6452L51.264 27.6056L45.9875 30.6448L44.8986 29.5558Z" fill="white"/>
+            </g>
+            </svg>
+          <button class="card-button1" type="button"> <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+            <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="rgba(255, 255, 255, 0.3)"/>
+            <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="rgba(255, 255, 255, 0.3)"/>
+            </svg> &nbsp; Купить</button>
+          <button class="card-button2" type="button">В закладки</button>
+          <img src="img/items/BFG_2000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 2000"></p>
         <p class="catalog-item-title">Перфоратор BOSCH BFG 2000</p>
         <p class="catalog-item-price">22500 Р.</p>
         <button class="catalog-item-button" type="button">12500 Р.</button>
@@ -235,7 +287,7 @@
       <h2>Контакты</h2>
       <p class="contacts-description"> Вы можете забрать товар сами, <br>
         заехав в наш офис:</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <button class="main-button contacts-button" type="button">Заблудились? Напишите нам!</button>
     </div>
   </section>
@@ -295,7 +347,7 @@
   <button class="modal-close" type="button"></button>
 </section>
 <section  class="modal-modal-map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1612269591425!5m2!1sru!2sru" width="600" height="450"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   <button class="modal-close" type="button"></button>
 </section>
 </body>
