--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <a class="category-button" href="" aria-label="кнопка категории товаров">для стройки</a>
      </div>
      <div class="category-items">
+      <form>
         <div class="category-slider">
           <input class="input-btn-1 visually-hidden" type="radio" id="btn-1" name="toggle" checked>
           <input class="input-btn-2 visually-hidden" type="radio" id="btn-2" name="toggle">
@@ -107,6 +108,7 @@
           </div>
           <a  class="catalog-btn" href="catalog.html" aria-label="кнопка каталога">ОТКРЫТЬ КАТАЛОГ</a>
         </div>
+      </form>
      </div>
      <div class="category-sale">
       <p>Скидки 50%</p>
@@ -285,7 +287,7 @@
       <p class="contacts-description"> Вы можете забрать товар сами, <br>
         заехав в наш офис:</p>
         <img class="min-map" src="img/map.jpg" width="300" height="158"  alt="карта">
-        <a class="main-button contacts-button" aria-label="кнопка для связи и отправки формы" >Заблудились? Напишите нам!</a>
+        <a class="main-button contacts-button" aria-label="кнопка для связи и отправки формы" href="writeus.html" target="_blank">Заблудились? Напишите нам!</a>
 
     </div>
   </section>
