--- a/catalog.html
+++ b/catalog.html
@@ -96,7 +96,7 @@
     <div class="catalog-header">
       <h2>Перфораторы</h2>
     </div>
-    <form class="filters" action="https://echo.htmlacademy.ru/." method="get" target="_blank">
+    <form class="filters" action="https://echo.htmlacademy.ru" method="get" target="_blank">
       <div class="filter">
         <p>Фильтр:</p>
       </div>
@@ -376,7 +376,7 @@
       <ul class="footer-nav-main">
         <li><a href="" aria-label="кнопка меню">Компания</a></li>
         <li><a href="" aria-label="кнопка меню">Новости</a></li>
-        <li><a href="" aria-label="кнопка меню">Каталог</a></li>
+        <li><a href="catalog.html" aria-label="кнопка меню">Каталог</a></li>
         <li><a href="" aria-label="кнопка меню">Доставка</a></li>
         <li><a href="" aria-label="кнопка меню">Контакты</a></li>
       </ul>
