--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <ul class="footer-nav-main">
         <li><a href="" aria-label="кнопка меню">Компания</a></li>
         <li><a href="" aria-label="кнопка меню">Новости</a></li>
-        <li><a href="" aria-label="кнопка меню">Каталог</a></li>
+        <li><a href="catalog.html" aria-label="кнопка меню">Каталог</a></li>
         <li><a href="" aria-label="кнопка меню">Доставка</a></li>
         <li><a href="" aria-label="кнопка меню">Контакты</a></li>
       </ul>
@@ -335,7 +335,7 @@
  </div>
 </footer>
 <section class="modal-write-us">
-  <form class="write-us-form" action="#" method="post">
+  <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post" target="_blank">
     <label for="user-name" aria-label="поле ввода персональных данных">Ваше имя:</label>
     <label for="user-email" aria-label="поле ввода персональных данных">Ваш e-mail:</label>
     <label for="user-text" aria-label="поле ввода комментария">Текст письма:</label>
